--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-preset-stage-1": "^6.1.18",
+    "file-loader": "^0.11.2",
     "lodash": "^3.10.1",
     "react": "^0.14.9",
     "react-addons-css-transition-group": "^15.6.0",
@@ -37,6 +38,7 @@
     "react-masonry-component": "^5.0.7",
     "react-redux": "4.3.0",
     "react-router-dom": "^4.1.2",
+    "react-textarea-autosize": "^5.1.0",
     "redux": "^3.0.4",
     "redux-form": "^6.6.3",
     "redux-promise": "^0.5.3",
